--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"express": "^4.19.2",
+		"serialport": "^12.0.0",
 		"socket.io": "^4.7.5",
 		"uuid": "^10.0.0",
 		"yargs": "^17.7.2"
